mutants.out.old/log/src__proto__single__ent__mod.rs_line_46_col_9.log

*** src/proto/single/ent/mod.rs:46:9: replace JobBuilder::expires_in -> &mut Self with Box::leak(Box::new(Default::default()))

*** mutation diff:
--- src/proto/single/ent/mod.rs
+++ replace JobBuilder::expires_in -> &mut Self with Box::leak(Box::new(Default::default()))
@@ -38,17 +38,17 @@
     /// # use faktory::JobBuilder;
     /// # use chrono::Duration;
     /// let _job = JobBuilder::new("order")
     ///     .args(vec!["ISBN-14:9781718501850"])
     ///     .expires_in(Duration::weeks(0))
     ///     .build();
     /// ```
     pub fn expires_in(&mut self, ttl: chrono::Duration) -> &mut Self {
-        self.expires_at(Utc::now() + ttl)
+        Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
     }
 
     /// How long the Faktory will not accept duplicates of this job.
     ///
     /// The job will be considered unique for the kind-args-queue combination. The uniqueness is best-effort,
     /// rather than a guarantee. Check out the Enterprise Faktory [docs](https://github.com/contribsys/faktory/wiki/Ent-Unique-Jobs)
     /// for details on how scheduling, retries, and other features live together with `unique_for`.
     ///


*** /home/pavel/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/cargo build --tests --manifest-path /tmp/cargo-mutants-faktory-rs-jIMFg4.tmp/Cargo.toml --all-features
   Compiling faktory v0.12.5 (/tmp/cargo-mutants-faktory-rs-jIMFg4.tmp)
error[E0277]: the trait bound `JobBuilder: Default` is not satisfied
  --> src/proto/single/ent/mod.rs:46:28
   |
46 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
   |                            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `JobBuilder`
   |
help: consider annotating `JobBuilder` with `#[derive(Default)]`
  --> src/proto/single/mod.rs:65:48
   |
65 | #[derive(Serialize, Deserialize, Debug, Clone, #[derive(Default)]
   |                                                ++++++++++++++++++

For more information about this error, try `rustc --explain E0277`.
error: could not compile `faktory` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `single::JobBuilder: Default` is not satisfied
  --> src/proto/single/ent/mod.rs:46:28
   |
46 |         Box::leak(Box::new(Default::default())) /* ~ changed by cargo-mutants ~ */
   |                            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `single::JobBuilder`
   |
help: consider annotating `single::JobBuilder` with `#[derive(Default)]`
  --> src/proto/single/mod.rs:65:48
   |
65 | #[derive(Serialize, Deserialize, Debug, Clone, #[derive(Default)]
   |                                                ++++++++++++++++++

error: could not compile `faktory` (lib test) due to 1 previous error

*** result: Failure(101)
